--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
+    "build": "netlify deploy --prod",
     "dev": "SET NODE_ENV=DEVELOPMENT & nodemon app",
     "prod": "SET NODE_ENV=PRODUCTION & nodemon app"
   },
@@ -15,11 +16,13 @@
     "axios": "^1.7.7",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4"
   },
   "devDependencies": {
+    "netlify-cli": "^17.34.3",
     "nodemon": "^3.1.4"
   }
 }
