--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   "author": "muru",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^7.14.0",
     "axios": "^1.7.7",
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.1",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.5.4"
+    "mongoose": "^8.5.4",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "netlify-cli": "^17.34.3",
